--- a/topic-01/unit-2/book-a/00.Lab-02.md
+++ b/topic-01/unit-2/book-a/00.Lab-02.md
@@ -1,3 +1,9 @@
+---
+icon:
+  type: heroicons-outline:book-open
+  color: red
+---    
+
 # Objectives
 
 A few sentences on the purpose of the lab. Avoid bullet points here for formatting reasons.
