--- a/topic-02/unit-2/book-a/00.Lab-04.md
+++ b/topic-02/unit-2/book-a/00.Lab-04.md
@@ -1,3 +1,8 @@
+---
+icon:
+  type: heroicons-outline:book-open
+  color: red
+---   
 # Objectives
 
 A few sentences on the purpose of the lab. Avoid bullet points here for formatting reasons.
