--- a/topic-03/unit-2/book-a/00.Lab-07.md
+++ b/topic-03/unit-2/book-a/00.Lab-07.md
@@ -1,3 +1,9 @@
+---
+icon:
+  type: uil:flask
+  color: red
+---  
+
 # Objectives
 
 A few sentences on the purpose of the lab. Avoid bullet points here for formatting reasons.
