--- a/topic-01/unit-1/book-a/03.03.md
+++ b/topic-01/unit-1/book-a/03.03.md
@@ -2,15 +2,15 @@
 
 You can inert links in bullet points:
 
-- <http://github.com>
-- <http://bitbucket.dom>
+- <https://github.com>
+- <https://bitbucket.com>
 
 You can also insert links to other steps:
 
-- [Step 01](#/01)
-- [Step 02](#/02)
-- [Step 03](#/03)
-- [Step 04](#/04)
+- [Step 01](#01)
+- [Step 02](#02)
+- [Step 03](#03)
+- [Step 04](#04)
 
 More Code Block examples
 
