--- a/topic-01/unit-1/book-a/04.04.md
+++ b/topic-01/unit-1/book-a/04.04.md
@@ -1,9 +1,9 @@
 # Images
 
-Image without a title:
+Anotther image
 
 ![](img/04.jpg)
 
-Image with a title:
+And another one:
 
-![This is a Stone Arch](img/03.jpg)
+![](img/05.jpg)
