--- a/topic-01/unit-1/book-a/01.01.md
+++ b/topic-01/unit-1/book-a/01.01.md
@@ -1,6 +1,6 @@
 # Text
 
-It's very easy to make some words **bold** and other words *italic* with Markdown. You can even [inset a link to Google](http://google.com)
+It's very easy to make some words **bold** and other words *italic* with Markdown. You can even [insert a link](https://tutors.dev/)
 
 
 ## Lists
