--- a/topic-01/unit-1/book-a/03.03.md
+++ b/topic-01/unit-1/book-a/03.03.md
@@ -7,10 +7,10 @@ You can inert links in bullet points:
 
 You can also insert links to other steps:
 
-- [Step 01](#01)
-- [Step 02](#02)
-- [Step 03](#03)
-- [Step 04](#04)
+- [Step 01](#lab/tutors-starter.netlify.app/topic-01/unit-1/book-a/01)
+- [Step 02](#lab/tutors-starter.netlify.app/topic-01/unit-1/book-a/02)
+- [Step 03](#lab/tutors-starter.netlify.app/topic-01/unit-1/book-a/03)
+- [Step 04](#lab/tutors-starter.netlify.app/topic-01/unit-1/book-a/04)
 
 More Code Block examples
 
