--- a/topic-01/unit-1/book-a/02.02.md
+++ b/topic-01/unit-1/book-a/02.02.md
@@ -18,3 +18,12 @@ A horizontal rules above and below
 Some more images:
 
 ![](img/01.jpg)
+
+
+Another table:
+
+| Tables   |      Are      |  Cool |
+|----------|:-------------:|------:|
+| col 1 is |  left-aligned | $1600 |
+| col 2 is |    centered   |   $12 |
+| col 3 is | right-aligned |    $1 |
