--- a/topic-01/unit-1/book-a/02.02.md
+++ b/topic-01/unit-1/book-a/02.02.md
@@ -22,8 +22,8 @@ Some more images:
 
 Another table:
 
-| Tables   |      Are      |  Cool |
-|----------|:-------------:|------:|
-| col 1 is |  left-aligned | $1600 |
-| col 2 is |    centered   |   $12 |
-| col 3 is | right-aligned |    $1 |
+| Tables   |      Are    |  Cool |
+|----------|-------------|-------|
+| col 1 is | here        | $1600 |
+| col 2 is | there       |   $12 |
+| col 3 is | also here   |    $1 |
