--- a/topic-02/unit-2/book-a/02.02.md
+++ b/topic-02/unit-2/book-a/02.02.md
@@ -18,3 +18,12 @@ A horizontal rules above and below
 Some more images:
 
 ![](img/01.jpg)
+
+
+Another table:
+
+| Tables   |      Are    |  Cool |
+|----------|-------------|-------|
+| col 1 is | here        | $1600 |
+| col 2 is | there       |   $12 |
+| col 3 is | also here   |    $1 |
